GTM HTTP Fetcher Release Notes

Project site:     http://code.google.com/p/gtm-http-fetcher/
Discussion group: http://groups.google.com/group/google-toolbox-for-mac

22-November-2011

Fetchers now support a servicePriority property which affects the order in
which the fetcher service object dequeues delayed fetchers


1-November-2011

On status 401 results when using an authorizer, the fetcher will attempt a
single retry if the authorizer implements a primeForRefresh method


7-October-2011

Changed isFetching method to return YES during service and authorization delays


9-September-2011

Added support for creating an upload fetcher from a location URL to allow
restarting uploads with a new upload fetcher instance


18-August-2011

Added GTMReadMonitorInputStream for logging uploaded NSInputStreams


8-July-2011

Added shouldFetchInBackground property (thanks justin a)


24-Mar-2011

Added authorizer support


7-Feb-2011

Made cookies set by a redirect immediately available in the new request (thanks ehoracek)
Added getter for static cookie storage


16-Nov-2010

Added fetcher comment property for logging


27-Oct-2010

Added downloadPath and downloadFileHandle properties
Added waitForCompletionWithTimeout:
Renamed GTMAssertSelectorNilOrImplementedWithArgs()


4-Oct-2010

Ensure that delegate is nil when not retained.

   
Release 1.0.0
9-Sept-2010

Initial public release.